samples/_failures_safe/1761261077_fedb19_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f52c1581.c: In function ‘main’:
./samples/SAFE/__tmp_f52c1581.c:168:5: error: expected declaration or statement at end of input
  168 |     if (!tokens) {
      |     ^~
./samples/SAFE/__tmp_f52c1581.c:168:5: error: expected declaration or statement at end of input
